--- a/package.json
+++ b/package.json
@@ -16,5 +16,10 @@
   "bugs": {
     "url": "https://github.com/Jaime200/login-template/issues"
   },
-  "homepage": "https://github.com/Jaime200/login-template#readme"
+  "homepage": "https://github.com/Jaime200/login-template#readme",
+  "dependencies": {
+    "webpack": "^5.71.0",
+    "webpack-cli": "^4.9.2",
+    "webpack-devserver": "^0.0.6"
+  }
 }
