npm install babel

--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
   },
   "homepage": "https://github.com/Jaime200/login-template#readme",
   "dependencies": {
+    "@babel/preset-env": "^7.16.11",
+    "@babel/preset-react": "^7.16.7",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "webpack": "^5.71.0",
