--- a/package.json
+++ b/package.json
@@ -20,6 +20,9 @@
   "dependencies": {
     "@babel/preset-env": "^7.16.11",
     "@babel/preset-react": "^7.16.7",
+    "babel-loader": "^8.2.4",
+    "css-loader": "^6.7.1",
+    "html-loader": "^3.1.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "webpack": "^5.71.0",
