--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "babel-loader": "^8.2.4",
     "css-loader": "^6.7.1",
     "html-loader": "^3.1.0",
+    "html-webpack-plugin": "^5.5.0",
+    "mini-css-extract-plugin": "^2.6.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "webpack": "^5.71.0",
