--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "login",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "src/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "webpack serve --open"
   },
   "repository": {
     "type": "git",
@@ -30,5 +31,8 @@
     "webpack": "^5.71.0",
     "webpack-cli": "^4.9.2",
     "webpack-devserver": "^0.0.6"
+  },
+  "devDependencies": {
+    "webpack-dev-server": "^4.7.4"
   }
 }
