--- a/package.json
+++ b/package.json
@@ -29,8 +29,7 @@
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "webpack": "^5.71.0",
-    "webpack-cli": "^4.9.2",
-    "webpack-devserver": "^0.0.6"
+    "webpack-cli": "^4.9.2"
   },
   "devDependencies": {
     "webpack-dev-server": "^4.7.4"
