--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "mini-css-extract-plugin": "^2.6.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
+    "style-loader": "^3.3.1",
     "webpack": "^5.71.0",
     "webpack-cli": "^4.9.2"
   },
